# externals

./: .gitignore  README.md
assimp-3.1.1/: .gitignore  CMakeLists.txt  build_android.sh
assimp-3.1.1/code/: CMakeLists.txt  FBXConverter.cpp  FBXMaterial.cpp  MaterialSystem.cpp  ZBase64.cpp
assimp-3.1.1/include/assimp/: material.h  material.inl  scene.h
bullet3/: CMakeLists.txt
bullet3/src/: CMakeLists.txt
bullet3/src/PhysicsBT/: ParaPhysicsWorld.cpp  ParaPhysicsWorld.h  PhysicsBT.cpp
cAudioEngine/: CMakeLists.txt  build_android.sh  readme.txt
cAudioEngine/DependenciesSource/openal-soft-1.16.0/: CMakeLists.txt
cAudioEngine/Plugins/mp3Decoder/src/: cMP3Decoder.cpp
cAudioEngine/cAudio/: CMakeLists.txt
cAudioEngine/cAudio/ParaEngineWrapper/: ParaAudioEngine.cpp  ParaAudioEngine.h  cAudioEngine.cpp
cAudioEngine/cAudio/include/: cAudioDefines.h
cAudioEngine/cAudio/src/: cOpenALAudioDeviceList.cpp  cPluginManager.cpp
luajit/: build_android.sh  build_android_cygwin_SysRoot_NotWorking.sh
luajit/include/: luaconf.h
rsync_script_svn/: leio.run.bat  readme.txt  rsync_db.leio.ps
